# kitsune

./: .env.copy  .gitignore  Dockerfile  README.md  agent.py  api.py  app.py  config.py  coverage.py  docker-compose.yml  enrichment.py  intel_store.py  ioc_parser.py  llm_factory.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  utils.py
.streamlit/: config.toml
core/: agent.py  config.py  coverage.py  enrichment.py  github_pr.py  intel_store.py  ioc_parser.py  llm_factory.py  mitre_actors.py  mitre_tactics.py  models.py  prompts.py  sigma_repo.py  utils.py
tests/: test_coverage.py  test_fuzzy_sigma_repo.py  test_intel_store.py  test_intel_store_new.py  test_sigma_repo.py  test_utils.py
