[project]
name = "kitsune"
version = "0.2.0"
description = ""
authors = [
    {name = "Christina23"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-core (>=0.3.76,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-anthropic (>=0.3.20,<0.4.0)",
"langchain-openai (>=0.3.33,<0.4.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "redis[hiredis] (>=5.0.0,<6.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.30.0,<1.0.0)",
    "streamlit (>=1.40.0,<2.0.0)"
]


[tool.black]
line-length = 79
target-version = ["py312"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
